サーバーの情報を更新するエンドポイントを作成
