# apps/front/src/lib/api/type.ts
@@ -100,6 +100,22 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/v1/server-sessions/update-server-info": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        get?: never;
+        put?: never;
+        post: operations["ServersessionsController_updateServerInfo"];
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
     "/v1/server-sessions/{id}": {
         parameters: {
             query?: never;
@@ -161,6 +177,26 @@ export interface components {
             createdAt: string;
             /** Format: date-time */
             updatedAt: string;
+        };
+        UpdateServerInfoDto: {
+            /** @example https://example.com */
+            origin: string;
+        };
+        ServerInfoEntity: {
+            /** Format: uuid */
+            id: string;
+            /** Format: date-time */
+            createdAt: string;
+            /** Format: date-time */
+            updatedAt: string;
+            name: string;
+            /** Format: uuid */
+            serverSessionId: string;
+            softwareName: string;
+            softwareVersion: string;
+            iconUrl: string;
+            faviconUrl: string;
+            themeColor: string;
         };
     };
     responses: never;
@@ -339,6 +375,35 @@ export interface operations {
                 };
                 content: {
                     "application/json": components["schemas"]["CreateServerSessionResponseEntity"];
+                };
+            };
+            401: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content?: never;
+            };
+        };
+    };
+    ServersessionsController_updateServerInfo: {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        requestBody: {
+            content: {
+                "application/json": components["schemas"]["UpdateServerInfoDto"];
+            };
+        };
+        responses: {
+            201: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["ServerInfoEntity"];
                 };
             };
             401: {
